fixed dropdown overflow

--- a/frontend/src/Views/Main/Main.scss
+++ b/frontend/src/Views/Main/Main.scss
@@ -6,8 +6,9 @@
 .subContainer {
   display: flex;
   flex-direction: column;
-  overflow: clip;
+
   justify-content: center;
+  position: relative;
 
   box-sizing: border-box;
 
